# KaMIS

./: .genMIS_new.sh.swp  .gen_ml_reduce_test.sh.swp  .gitignore  .kernel  .kernel_ml_kernel_mis.sh.swp  .perf_table_it_kernel.sh.swm  .perf_table_it_kernel.sh.swn  .perf_table_it_kernel.sh.swo  .perf_table_it_kernel.sh.swp  CMakeLists.txt  ad_ker  args.txt  bash_multi.sh  check_feat_calculated.sh  compile_withcmake.sh  corr_format  create_perf_table.sh  del_sorted_dup.sh  dumpColCrubbs.sh  evalRW.sh  exp_test  experiment_file  find_failed_kernels.sh  genExpLemmon.sh  genExp_weighted_branch_reduce.sh  genFeat.sh  genFeat_all.sh  genKernel.sh  genKernels.sh  genMIS.sh  genMIS_missing.sh  genMIS_new.sh  gen_ml_reduce_kernels.sh  gen_perf_data.sh  graphs_missing_mis  graphs_no_feat.txt  mis_exp_file  ml_reduce_kernels_tests  ml_reduce_perf_test_graph_size  ml_reduce_perf_test_size  (+11 more)
examples/: simple.graph  simple.graph.red  simple.graph.red1  simple.graph.red2  weight_nodes.graph.feat  weight_nodes.graph.red1  weight_nodes.graph.red2
features/: calc_mis.sh  features.py
misc/download_instances/: download_instances.py
preprocessing/: .cpp_preprocessing.py.swp  .ml_reduce_c.py.swp  calc_kernels.py  check_graphs.sh  cpp_preprocessing.py  features.cpp  features.py  kamis_branch_on_kernel.py  loading_utils.py  ml_reduce.py  ml_reduce_c.py  ml_reduce_new.py  multi_branch_reduce.py  self_loops_test.py  training.py  training_c.py
table_learner/: README.md
table_learner/working_example/: CMakeLists.txt  compile_withcmake.sh
table_learner/working_example/data/: agaricus.txt.test  agaricus.txt.train  agaricus.withoutlabel.eval  cos.eval  cos.test  nsquare.eval  nsquare.eval2  nsquare.eval3  simplefunc.eval  simplefunc.train
table_learner/working_example/src/: config.h  parse_parameters.h  predict.cpp  table_learner.cpp
(+88 files in other folders)
